// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<header
  class="Header"
>
  <div
    class="Header-Title"
  >
    <img
      class="Header-Logo"
      src="../public/img/polyswarm-white.svg"
    >
      
    </img>
    <h3>
      
    </h3>
  </div>
</header>
`;

exports[`shows title props 1`] = `
<header
  class="Header"
>
  <div
    class="Header-Title"
  >
    <img
      class="Header-Logo"
      src="../public/img/polyswarm-white.svg"
    >
      
    </img>
    <h3>
      Title
    </h3>
  </div>
</header>
`;
